# crates

./: README.md
SPEC-NEW/: PLANO-SPECS.md  SPEC-0036.md  SPEC-0037.md  SPEC-0038.md  SPEC-0039.md  SPEC-0040.md  SPEC-0041.md  SPEC-009-u64.md  SPEC-010.md  SPEC-011.md  SPEC-019-028.md  SPEC-029-035.md  SPEC-INDEX.md  SPEC.md  STATUS.md
graphify-out/: graph.json  manifest.json
graphify-out/cache/: stat-index.json
heraclitus-activation/: Cargo.toml
heraclitus-activation/src/: lib.rs
heraclitus-analytics/: Cargo.toml
heraclitus-analytics/benches/: fused_vs_sequential.rs
heraclitus-analytics/src/: flight.rs  lib.rs  planner.rs  vectorized.rs
heraclitus-btree/: Cargo.toml
heraclitus-btree/src/: lib.rs
heraclitus-btree/tests/: review_probe.rs
heraclitus-cli/: Cargo.toml
heraclitus-cli/src/: lib.rs  main.rs
heraclitus-client/: Cargo.toml
heraclitus-client/src/: lib.rs
heraclitus-client/tests/: end_to_end.rs
heraclitus-compliance/: Cargo.toml
heraclitus-compliance/examples/: seed_log.rs
heraclitus-compliance/src/: commit.rs  lib.rs  receipt.rs  rfc3161.rs  signer.rs  tsa.rs  verify.rs  worker.rs
heraclitus-core/: Cargo.toml
heraclitus-core/src/: artifact_registry.rs  canonical.rs  capability.rs  config.rs  consistency.rs  contracts.rs  cost.rs  dispatcher.rs  ebr.rs  error.rs  event.rs  flight.rs  format_version.rs  hlc.rs  id.rs  ir.rs  lib.rs  numa.rs  plugin.rs  runtime.rs  sandbox.rs  streaming.rs  telemetry.rs
heraclitus-core/src/vm/: codec.rs  interpreter.rs  mod.rs  quantizer.rs
heraclitus-crypto/: Cargo.toml
heraclitus-crypto/src/: lib.rs
heraclitus-distill/: Cargo.toml
heraclitus-distill/src/: lib.rs
heraclitus-gpu/: Cargo.toml
heraclitus-gpu/src/: lib.rs
heraclitus-index-attr/: Cargo.toml
heraclitus-index-attr/src/: lib.rs
heraclitus-index-graph/: Cargo.toml
heraclitus-index-graph/src/: adaptive.rs  decision.rs  dense_map.rs  entity.rs  lib.rs  provenance.rs  temporal.rs
heraclitus-index-text/: Cargo.toml
heraclitus-index-text/src/: lib.rs
heraclitus-index-vector/: Cargo.toml
heraclitus-index-vector/benches/: hnsw_search.rs
heraclitus-index-vector/src/: lib.rs
heraclitus-log/: Cargo.toml
heraclitus-log/benches/: append.rs
heraclitus-log/examples/: crash_writer.rs  extract_memory.rs
heraclitus-log/src/: cpm.rs  format.rs  lib.rs  mmap.rs  skip_scan.rs  subscribe.rs  vm_bridge.rs  zone_map.rs
heraclitus-log/tests/: crash_injection.rs  manifest.rs  v2_compat.rs
heraclitus-manifold/: Cargo.toml
heraclitus-manifold/benches/: distance.rs
heraclitus-manifold/src/: estimate.rs  lib.rs
heraclitus-memtable/: Cargo.toml
heraclitus-memtable/src/: lib.rs
heraclitus-proto/: Cargo.toml  build.rs
heraclitus-proto/proto/: heraclitus.proto  raft.proto
heraclitus-proto/src/: lib.rs
heraclitus-query/: Cargo.toml
heraclitus-query/src/: ast.rs  backend.rs  fusion.rs  gql.pest  lib.rs  plan.rs
heraclitus-query/tests/: review_probes.rs
heraclitus-raft/: Cargo.toml
heraclitus-raft/src/: consensus.rs  durable.rs  grpc.rs  lib.rs  net.rs
heraclitus-retrieval/: Cargo.toml
heraclitus-retrieval/src/: lib.rs
heraclitus-server/: Cargo.toml
heraclitus-server/src/: boot.rs  cluster.rs  embedded.rs  engine.rs  flight_grpc.rs  grpc.rs  lib.rs  main.rs  rest.rs
heraclitus-server/tests/: flight_protocol.rs
heraclitus-tier/: Cargo.toml
heraclitus-tier/src/: lib.rs
heraclitus-txn/: Cargo.toml
heraclitus-txn/src/: lib.rs
heraclitus-views/: Cargo.toml
heraclitus-views/src/: lib.rs
heraclitus-views/tests/: fast_boot.rs
heraclitus-wasm/: Cargo.toml
heraclitus-wasm/src/: lib.rs
hume-ir/: Cargo.toml
hume-ir/benches/: interp_vs_jit.rs
hume-ir/src/: jit.rs  lib.rs  passes.rs
hume-kernel/: Cargo.toml
hume-kernel/src/: arena.rs  chunk.rs  compression.rs  lib.rs  memory.rs  morsel.rs  partition.rs  selection.rs  topk.rs  validity.rs  vector.rs
hume-sketches/: Cargo.toml
hume-sketches/src/: lib.rs
