[package]
name = "heraclitus-activation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ACT-R base-level activation store, O(1) incremental approximation"

[dependencies]
heraclitus-core = { workspace = true }
heraclitus-views = { workspace = true }
dashmap = { workspace = true }
arrayvec = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rand = { workspace = true }
