[package]
name = "heraclitus-analytics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "SQL analytics (DataFusion) over the immutable log — read-only, no core changes"

[dependencies]
heraclitus-core = { workspace = true }
heraclitus-log = { workspace = true }
core_affinity = "0.8"
datafusion = "54.0.0"
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
