[package]
name = "heraclitus-btree"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Write-optimized Bᵋ-tree (Fractal Tree) for materialized-view persistence"

[dependencies]
blake3 = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
