[package]
name = "heraclitus-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Admin & inspection CLI: log inspect, verify, view rebuild, bench"

[[bin]]
name = "heraclitus"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
heraclitus-core = { workspace = true }
heraclitus-compliance = { workspace = true }
heraclitus-log = { workspace = true }
heraclitus-manifold = { workspace = true }
heraclitus-index-vector = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }
