[package]
name = "heraclitus-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chacha20poly1305 = { workspace = true }
dashmap = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
