[package]
name = "heraclitus-distill"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Episodic-to-semantic consolidation as LSM-style compaction, with total provenance"

[dependencies]
heraclitus-core = { workspace = true }
heraclitus-log = { workspace = true }
heraclitus-manifold = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
