[package]
name = "heraclitus-index-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Derived adjacency and property indexes"

[dependencies]
heraclitus-core = { workspace = true }
heraclitus-views = { workspace = true }
dashmap = { workspace = true }
roaring = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
leiden-rs = "0.8.1"

[dev-dependencies]
tempfile = { workspace = true }
