[package]
name = "heraclitus-index-text"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Derived BM25 inverted index"

[dependencies]
heraclitus-core = { workspace = true }
heraclitus-views = { workspace = true }
heraclitus-memtable = { workspace = true }
