[package]
name = "heraclitus-memtable"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "In-RAM tail index: guarantees read-your-own-writes"

[dependencies]
heraclitus-core = { workspace = true }
heraclitus-manifold = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
heraclitus-log = { workspace = true }
tempfile = { workspace = true }
