[package]
name = "heraclitus-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Protobuf definitions and generated gRPC types"

[dependencies]
tonic = { workspace = true }
prost = "0.13"

[build-dependencies]
tonic-build = { workspace = true }
protox = { workspace = true }
