[package]
name = "heraclitus-tier"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cold tiering to object storage with cryptographic demotion receipts"

[dependencies]
heraclitus-core = { workspace = true }
heraclitus-log = { workspace = true }
object_store = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
bincode = { workspace = true }
parquet = "59.0.0"
arrow-array = "59.0.0"
arrow-schema = "59.0.0"

[features]
# Cold tier na NUVEM (opt-in): ligam os backends GCS/S3 do object_store.
# Sem elas, o tier só faz object store local (o default). As credenciais
# vêm do ambiente (GOOGLE_APPLICATION_CREDENTIALS / AWS_*), nunca do TOML.
gcp = ["object_store/gcp"]
aws = ["object_store/aws"]

[dev-dependencies]
tempfile = { workspace = true }
