[package]
name = "heraclitus-txn"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MVCC snapshots over log offsets + optimistic compare-and-append"

[dependencies]
heraclitus-core = { workspace = true }
heraclitus-log = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
