[package]
name = "heraclitus-views"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Materialized view engine: replay, watermarks, deterministic rebuild"

[dependencies]
heraclitus-core = { workspace = true }
heraclitus-log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
