[package]
name = "hume-ir"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# HUME-IR (SPEC-000 §6, SPEC-0038 §1) — IR SSA + verificador + interpretador
# (cold tier) + JIT Cranelift (hot tier, feature `jit`, pure-Rust sem LLVM/CUDA).
[dependencies]
cranelift = { version = "0.116", optional = true }
cranelift-jit = { version = "0.116", optional = true }
cranelift-module = { version = "0.116", optional = true }

[features]
# Hot tier: geração de código nativo via Cranelift (SPEC-0038 §3).
jit = ["dep:cranelift", "dep:cranelift-jit", "dep:cranelift-module"]

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "interp_vs_jit"
harness = false
required-features = ["jit"]
